--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.3",
     "babel-eslint": "^10.1.0",
     "parcel-bundler": "^1.12.5",
     "react": "^17.0.2",
