--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.2.6",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
@@ -37,9 +37,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^27.0.4",
     "jest-fetch-mock": "^3.0.3",
-    "postcss": "^7.0.35",
+    "postcss": "^8.3.0",
     "prettier": "^2.3.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4",
+    "tailwindcss": "^2.1.4",
     "typescript": "^4.3.2"
   },
   "dependencies": {
