--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-ts-boilerplate",
+  "name": "adoptapet",
   "version": "1.0.0",
   "description": "Boilerplate for React apps with TypeScript, ESLint and Prettier.",
   "main": "src/index.js",
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@fullhuman/postcss-purgecss": "^3.0.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/react-hooks": "^7.0.0",
     "@types/react": "^17.0.9",
@@ -27,7 +28,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
-    "autoprefixer": "^10.2.6",
+    "autoprefixer": "^9.8.6",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
@@ -37,9 +38,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^27.0.4",
     "jest-fetch-mock": "^3.0.3",
-    "postcss": "^8.3.0",
+    "postcss": "^7.0.35",
     "prettier": "^2.3.1",
-    "tailwindcss": "^2.1.4",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4",
     "typescript": "^4.3.2"
   },
   "dependencies": {
